Update package.ini - bug fix

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.3
+;version=0.5.4
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, cucholix and theboy181.'
 ;color=#8e43f7
@@ -29,14 +29,14 @@ package_source ./exefs_patches.ini
 ;mode=toggle
 ;grouping=split5
 on:
-    file_source './contents/.loaded/*/{title_id}/'
+    file_source './contents/.loaded/*/{title_id}*/'
     delete {file_source}
     delete './contents/.loaded/{folder_name}/duplicates.txt'
-    compare './contents/.loaded/{split({folder_name}," - ",0)}*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
+    compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
     move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
     delete './contents/.loaded/{folder_name}/'
 off:
-    file_source './contents/*/{title_id}/'
+    file_source './contents/*/{title_id}*/'
     filter './contents/.loaded/*/'
     move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
     mkdir ./contents/.loaded/{folder_name}/{file_name}/
@@ -53,7 +53,7 @@ on:
     file_source './contents/.loaded/*/*/'
     delete {file_source}
     delete './contents/.loaded/{folder_name}/duplicates.txt'
-    compare './contents/.loaded/{split({folder_name}," - ",0)}*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
+    compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
     move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
     delete './contents/.loaded/{folder_name}/'
 off:
@@ -62,13 +62,27 @@ off:
     move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
     mkdir ./contents/.loaded/{folder_name}/{file_name}/
 
+[*Toggle?2x]
+;mode=toggle
+;grouping=split3
+
+on:
+    file_source './contents/.loaded/*/'
+    delete '{file_source}duplicates.txt'
+    compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
+    delete {file_source}
+off:
+    filter './contents/.loaded/'
+    file_source './contents/*/'
+    move {file_source} '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
 
 
 [*Delete?2]
 ;grouping=split3
 file_source './contents/.loaded/*/'
 file_source './contents/*/'
-compare './contents/.loaded/{split({file_name}," - ",0)}*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
 delete -src '{file_source}location_on.txt' -filter '{file_source}duplicates.txt'
 delete {file_source}
 
@@ -170,7 +184,7 @@ set-footer '{list_file_source(*)}'
 [*Search Results?contents_repo]
 ;grouping=split2
 ini_file './config.ini'
-file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/'
+file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/*/'
 cp "{file_source}" './contents/{folder_name}/'
 
 [gap]
