Update package.ini - flag implementation

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -29,15 +29,16 @@ package_source ./exefs_patches.ini
 ;mode=toggle
 ;grouping=split5
 on:
-    file_source './contents/.loaded/*/{title_id}*/'
+    file_source './contents/.loaded/*/{title_id}*'
     delete {file_source}
     delete './contents/.loaded/{folder_name}/duplicates.txt'
     compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
     move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
     delete './contents/.loaded/{folder_name}/'
 off:
-    file_source './contents/*/{title_id}*/'
+    file_source './contents/*/{title_id}*'
     filter './contents/.loaded/*/'
+    flag './contents/{folder_name}/*/' './contents/.loaded/{folder_name}/'
     move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
     mkdir ./contents/.loaded/{folder_name}/{file_name}/
 
@@ -46,23 +47,8 @@ off:
 ;background=false
 ;gap=20
 
-[*Toggle?2]
-;mode=toggle
-;grouping=split5
-on:
-    file_source './contents/.loaded/*/*/'
-    delete {file_source}
-    delete './contents/.loaded/{folder_name}/duplicates.txt'
-    compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
-    move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
-    delete './contents/.loaded/{folder_name}/'
-off:
-    file_source './contents/*/*/'
-    filter './contents/.loaded/*/'
-    move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
-    mkdir ./contents/.loaded/{folder_name}/{file_name}/
 
-[*Toggle?2x]
+[*Toggle?2]
 ;mode=toggle
 ;grouping=split3
 
@@ -73,8 +59,9 @@ on:
     move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
     delete {file_source}
 off:
-    filter './contents/.loaded/'
     file_source './contents/*/'
+    filter './contents/.loaded/'
+    flag '{file_source}*/' './contents/.loaded/{file_name}/'
     move {file_source} '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
 
 
