--- a/Mod Alchemist/exefs_patches.ini
+++ b/Mod Alchemist/exefs_patches.ini
@@ -4,7 +4,7 @@
 ;mode=toggle
 ;grouping=split5
 on:
-    file_source '/atmosphere/exefs_patches/*/{title_id}'
+    file_source '/atmosphere/exefs_patches/*/{title_id}*'
     filter /atmosphere/exefs_patches/.offload/
     filter /atmosphere/exefs_patches/am/
     filter /atmosphere/exefs_patches/es_patches/
@@ -17,7 +17,7 @@ on:
     mkdir /atmosphere/exefs_patches/.offload/
     move '/atmosphere/exefs_patches/{folder_name}/' '/atmosphere/exefs_patches/.offload/{folder_name}/'
 off:
-    file_source '/atmosphere/exefs_patches/.offload/*/{title_id}'
+    file_source '/atmosphere/exefs_patches/.offload/*/{title_id}*'
     move '/atmosphere/exefs_patches/.offload/{folder_name}/' '/atmosphere/exefs_patches/{folder_name}/'
 
 [gap]
