--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -52,16 +52,18 @@ off:
 ;grouping=split3
 
 on:
+    logging
     file_source './contents/.loaded/*/'
     delete '{file_source}duplicates.txt'
     compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
     move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
-    delete {file_source}
+    delete '{file_source}'
 off:
+    logging
     file_source './contents/*/'
     filter './contents/.loaded/'
     flag '{file_source}*/' './contents/.loaded/{file_name}/'
-    move {file_source} '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
+    move '{file_source}' '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
 
 
 [*Delete?2]
