--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.4
+;version=0.5.5
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, cucholix and theboy181.'
 ;color=#8e43f7
@@ -10,85 +10,23 @@
 [gap]
 ;mode=table
 ;background=false
-;gap=20
+;gap=10
 
 [Title ID]
 ;mode=table
-'Program ID'='{title_id}'
+;polling=true
+'Title ID'='{title_id}'
 
 [Manage Mods]
 
 [*exeFS Patches]
 ;mode=forwarder
-package_source ./exefs_patches.ini
+package_source ./include/exefs_patches.ini
 
 
 [*Contents Mods?1]
-
-[*Active?2]
-;mode=toggle
-;grouping=split5
-on:
-    file_source './contents/.loaded/*/{title_id}*'
-    delete './contents/.loaded/{folder_name}/duplicates.txt'
-    compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
-    move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
-    delete './contents/.loaded/{folder_name}/'
-off:
-    file_source './contents/*/{title_id}*'
-    filter './contents/.loaded/*/'
-    flag './contents/{folder_name}/*/' './contents/.loaded/{folder_name}/'
-    move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
-
-
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-
-[*Toggle?2]
-;mode=toggle
-;grouping=split3
-
-on:
-    logging
-    file_source './contents/.loaded/*/'
-    delete '{file_source}duplicates.txt'
-    compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
-    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
-    delete '{file_source}'
-off:
-    logging
-    file_source './contents/*/'
-    filter './contents/.loaded/'
-    flag '{file_source}*/' './contents/.loaded/{file_name}/'
-    move '{file_source}' '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
-
-
-[*Delete?2]
-;grouping=split3
-file_source './contents/.loaded/*/'
-file_source './contents/*/'
-compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
-delete -src '{file_source}location_on.txt' -filter '{file_source}duplicates.txt'
-delete {file_source}
-
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-[contents info]
-;mode=table
-;background=false
-;alignment=left
-;offset=6
-;spacing=10
-
-'For managing content mods installed in'=''
-''='"/switch/.packages/Mod Alchemist/contents/"'
-
+;mode=forwarder
+package_source ./include/contents_mods.ini
 
 
 [Convert Mods]
@@ -141,10 +79,15 @@ delete "{file_source}"
 [Mod Repos]
 
 [*Install pchtxt]
-[*Search Pattern?pchtxt_repo]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
+
+[*Repos?1]
+;mode=forwarder
+package_source ./include/pchtxt_repos.ini
+
+[gap]
+;mode=table
+;background=false
+;gap=20
 
 [*Search Results?pchtxt_repo]
 ;grouping=split2
@@ -152,22 +95,25 @@ ini_file './config.ini'
 file_source './repos/pchtxts/*/*{ini_file("*Search Pattern?pchtxt_repo",footer)}*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
-[gap]
-;mode=table
-;background=false
-;gap=10
 
-[*Repos?1]
-;mode=forwarder
-package_source ./pchtxt_repos.ini
+[*Search Pattern?pchtxt_repo]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
+
 
 
 
 [*Install Contents]
-[*Search Pattern?contents_repo]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
+
+[*Repos?2]
+;mode=forwarder
+package_source ./include/contents_repos.ini
+
+[gap]
+;mode=table
+;background=false
+;gap=20
 
 [*Search Results?contents_repo]
 ;grouping=split2
@@ -175,17 +121,11 @@ ini_file './config.ini'
 file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/*/'
 cp "{file_source}" './contents/{folder_name}/'
 
-[gap]
-;mode=table
-;background=false
-;gap=10
 
-
-[*Repos?2]
-;mode=forwarder
-package_source ./contents_repos.ini
-
-
+[*Search Pattern?contents_repo]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
 
 
 [*Extract Repos]
@@ -202,7 +142,7 @@ unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
 [gap]
 ;mode=table
 ;background=false
-;gap=10
+;gap=20
 
 
 [Fl4sh9174's Mods]
@@ -230,32 +170,30 @@ unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
 try:
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
 download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
-delete './repos/pchtxts/*.zip'
-delete './repos/contents/*.zip'
-delete './repos/pchtxts/*/'
-delete './repos/contents/*/'
 unzip /config/ultrahand/downloads/Mod.Alchemist.zip /
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
 
 [Update Repos + Extract]
+
+try:
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Fl4sh9174.zip  ./repos/
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/KeatonTheBot.zip ./repos/
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/StevensND.zip ./repos/
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/cucholix.zip ./repos/
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/theboy181.zip ./repos/
+download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/cucholix_contents.zip ./repos/
+
 delete './repos/pchtxts/*.zip'
 delete './repos/contents/*.zip'
 delete './repos/pchtxts/*/'
 delete './repos/contents/*/'
 
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/Fl4sh9174.zip  ./repos/pchtxts/
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/KeatonTheBot.zip ./repos/pchtxts/
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/StevensND.zip ./repos/pchtxts/
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/cucholix.zip ./repos/pchtxts/
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/theboy181.zip ./repos/pchtxts/
-download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/contents/cucholix.zip ./repos/contents/
+unzip './repos/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
+unzip './repos/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
+unzip './repos/StevensND.zip' './repos/pchtxts/StevensND/'
+unzip './repos/cucholix.zip' './repos/pchtxts/cucholix/'
+unzip './repos/theboy181.zip' './repos/pchtxts/theboy181/'
 
-unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
-unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
-unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
-unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
-unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
-
-unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
+unzip './repos/cucholix_contents.zip' './repos/contents/cucholix/'
 
 [Package Info]
