--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -76,56 +76,27 @@ delete "{file_source}"
 
 [@Integrate]
 
+[gap]
+;mode=table
+;background=false
+;gap=10
+
+[Title ID]
+;mode=table
+;polling=true
+'Title ID'='{title_id}'
+
 [Mod Repos]
 
 [*Install pchtxt]
-
-[*Repos?1]
 ;mode=forwarder
-package_source ./include/pchtxt_repos.ini
-
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-[*Search Results?pchtxt_repo]
-;grouping=split2
-ini_file './config.ini'
-file_source './repos/pchtxts/*/*{ini_file("*Search Pattern?pchtxt_repo",footer)}*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-
-[*Search Pattern?pchtxt_repo]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
-
-
+package_source ./include/pchtxt_install.ini
 
 
 [*Install Contents]
-
-[*Repos?2]
 ;mode=forwarder
-package_source ./include/contents_repos.ini
+package_source ./include/contents_install.ini
 
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-[*Search Results?contents_repo]
-;grouping=split2
-ini_file './config.ini'
-file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/*/'
-cp "{file_source}" './contents/{folder_name}/'
-
-
-[*Search Pattern?contents_repo]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
 
 
 [*Extract Repos]
