--- a/Mod Alchemist/include/contents_install.ini
+++ b/Mod Alchemist/include/contents_install.ini
@@ -13,6 +13,16 @@
 
 [Install Contents]
 
+[*Active?contents_repo]
+;grouping=split2
+file_source './../repos/contents/*/*/{title_id}/'
+cp "{file_source}" './../contents/{folder_name}/'
+
+[gap]
+;mode=table
+;background=false
+;gap=20
+
 [*Repos?2]
 ;mode=forwarder
 package_source ./contents_repos.ini
@@ -25,11 +35,11 @@ package_source ./contents_repos.ini
 [*Search Results?contents_repo]
 ;grouping=split2
 ini_file './config.ini'
-file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/*/'
-cp "{file_source}" './contents/{folder_name}/'
+file_source './../repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/*/'
+cp "{file_source}" './../contents/{folder_name}/'
 
 
 [*Search Pattern?contents_repo]
 ;mode=option
-list_file_source './search_patterns.txt'
+list_file_source './../search_patterns.txt'
 set-footer '{list_file_source(*)}'
