--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.5
+;version=0.6.0
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, cucholix and theboy181.'
 ;color=#8e43f7
@@ -29,7 +29,7 @@ package_source ./include/exefs_patches.ini
 package_source ./include/contents_mods.ini
 
 
-[Convert Mods]
+[Convert pchtxts]
 
 [*pchtxt  ips]
 ;grouping=split2
@@ -44,12 +44,10 @@ pchtxt2cheat "{file_source}"
 
 
 
-
-#[gap]
-#;mode=table
-#;background=false
-#;gap=16
-
+[gap]
+;mode=table
+;background=false
+;gap=20
 
 [*Delete pchtxt]
 ;grouping=split2
@@ -99,72 +97,66 @@ package_source ./include/contents_install.ini
 
 
 
-[*Extract Repos]
-
-[Extract All]
-unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
-unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
-unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
-unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
-unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
-
-unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
+[Miscellaneous]
+[*Tools]
+[Dot Clean]
+dot-clean '/atmosphere/'
+dot-clean '/switch/'
+dot-clean '/config/'
 
 [gap]
 ;mode=table
 ;background=false
-;gap=20
+;gap=10
 
+[Dot Clean Info]
+;mode=table
+;background=false
+;alignment=left
+;offset=38
+;spacing=10
+''='Remove all files that begin with `._` within'
+''='`/atmosphere/`, `/switch/`, and `/config/`.'
 
-[Fl4sh9174's Mods]
-unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
+[gap]
+;mode=table
+;background=false
+;gap=14
 
-[KeatonTheBot's Mods]
-unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
+[Dot Clean All]
+dot-clean '/'
 
-[StevensND's Mods]
-unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
+[gap]
+;mode=table
+;background=false
+;gap=10
 
-[cucholix's Mods]
-unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
-unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
+[Dot Clean All Info]
+;mode=table
+;background=false
+;alignment=left
+;offset=38
+;spacing=10
+''='Remove all files that begin with `._`.'
 
-[theboy181's Mods]
-unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
-
-
-
-[Tools]
+[Miscellaneous]
 [*Software Update]
+;mode=forwarder
 
-[Update Mod Alchemist]
-try:
-delete /config/ultrahand/downloads/Mod.Alchemist.zip
-download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
-unzip /config/ultrahand/downloads/Mod.Alchemist.zip /
-delete /config/ultrahand/downloads/Mod.Alchemist.zip
-
-[Update Repos + Extract]
+package_source ./include/software_update.ini
 
 try:
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Fl4sh9174.zip  ./repos/
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/KeatonTheBot.zip ./repos/
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/StevensND.zip ./repos/
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/cucholix.zip ./repos/
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/theboy181.zip ./repos/
-download https://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/cucholix_contents.zip ./repos/
+delete ./RELEASE.ini
+set-ini-val ./include/config.ini 'Update Mod Alchemist' footer ''
+delete ./repos/RELEASE.ini
+set-ini-val ./include/config.ini '*Update Repos' footer ''
+set-ini-val ./include/config.ini 'Update All' footer ''
 
-delete './repos/pchtxts/*.zip'
-delete './repos/contents/*.zip'
-delete './repos/pchtxts/*/'
-delete './repos/contents/*/'
+download https://raw.githubusercontent.com/ppkantorski/Mod-Alchemist/refs/heads/main/RELEASE.ini ./RELEASE.ini
+ini_file ./RELEASE.ini
+set-ini-val ./include/config.ini 'Update Mod Alchemist' footer '{ini_file(Release Info,latest_version)}'
 
-unzip './repos/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
-unzip './repos/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
-unzip './repos/StevensND.zip' './repos/pchtxts/StevensND/'
-unzip './repos/cucholix.zip' './repos/pchtxts/cucholix/'
-unzip './repos/theboy181.zip' './repos/pchtxts/theboy181/'
-
-unzip './repos/cucholix_contents.zip' './repos/contents/cucholix/'
-
-[Package Info]
+download https://raw.githubusercontent.com/ppkantorski/Mod-Alchemist-Repos/refs/heads/main/RELEASE.ini ./repos/RELEASE.ini
+ini_file ./repos/RELEASE.ini
+set-ini-val ./include/config.ini '*Update Repos' footer '{ini_file(Release Info,latest_version)}'
+set-ini-val ./include/config.ini 'Update All' footer '{ini_file(Release Info,latest_version)}'
