--- a/Mod Alchemist/include/pchtxt_install.ini
+++ b/Mod Alchemist/include/pchtxt_install.ini
@@ -13,6 +13,17 @@
 
 [Install pchtxt]
 
+[*Active?pchtxt_repo]
+;grouping=split2
+logging
+file_source './../repos/pchtxts/*/*/*.pchtxt-*{title_id}*'
+cp "{slice({file_source},0,{math({length({file_source})}-17)})}" './../pchtxts/{folder_name}/'
+
+[gap]
+;mode=table
+;background=false
+;gap=20
+
 [*Repos?1]
 ;mode=forwarder
 package_source ./pchtxt_repos.ini
@@ -25,11 +36,11 @@ package_source ./pchtxt_repos.ini
 [*Search Results?pchtxt_repo]
 ;grouping=split2
 ini_file './config.ini'
-file_source './repos/pchtxts/*/*{ini_file("*Search Pattern?pchtxt_repo",footer)}*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
+file_source './../repos/pchtxts/*/*{ini_file("*Search Pattern?pchtxt_repo",footer)}*/*.pchtxt'
+cp "{file_source}" './../pchtxts/{folder_name}/'
 
 
 [*Search Pattern?pchtxt_repo]
 ;mode=option
-list_file_source './search_patterns.txt'
+list_file_source './../search_patterns.txt'
 set-footer '{list_file_source(*)}'
