--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -29,7 +29,7 @@ package_source ./include/exefs_patches.ini
 package_source ./include/contents_mods.ini
 
 
-[Convert pchtxts]
+[Convert pchtxt]
 
 [*pchtxt  ips]
 ;grouping=split2
