--- a/Mod Alchemist/include/contents_mods.ini
+++ b/Mod Alchemist/include/contents_mods.ini
@@ -16,16 +16,16 @@
 ;mode=toggle
 ;grouping=split5
 on:
-    file_source './contents/.loaded/*/{title_id}*'
-    delete './contents/.loaded/{folder_name}/duplicates.txt'
-    compare './contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
-    move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
-    delete './contents/.loaded/{folder_name}/'
+    file_source './../contents/.loaded/*/{title_id}*'
+    delete './../contents/.loaded/{folder_name}/duplicates.txt'
+    compare './../contents/.loaded/{split({folder_name}," - ",0)} -*/location_on.txt' './../contents/.loaded/{folder_name}/location_on.txt' './../contents/.loaded/{folder_name}/duplicates.txt'
+    move -src './../contents/.loaded/{folder_name}/location_on.txt' -dest './../contents/.loaded/{folder_name}/location_off.txt' -copy_filter './../contents/.loaded/{folder_name}/duplicates.txt'
+    delete './../contents/.loaded/{folder_name}/'
 off:
-    file_source './contents/*/{title_id}*'
-    filter './contents/.loaded/*/'
-    flag './contents/{folder_name}/*/' './contents/.loaded/{folder_name}/'
-    move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
+    file_source './../contents/*/{title_id}*'
+    filter './../contents/.loaded/*/'
+    flag './../contents/{folder_name}/*/' './../contents/.loaded/{folder_name}/'
+    move './../contents/{folder_name}/' '/atmosphere/contents/' -log_src './../contents/.loaded/{folder_name}/location_off.txt' -log_dest './../contents/.loaded/{folder_name}/location_on.txt'
 
 
 [gap]
@@ -40,24 +40,24 @@ off:
 
 on:
     logging
-    file_source './contents/.loaded/*/'
+    file_source './../contents/.loaded/*/'
     delete '{file_source}duplicates.txt'
-    compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+    compare './../contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
     move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
     delete '{file_source}'
 off:
     logging
-    file_source './contents/*/'
-    filter './contents/.loaded/'
-    flag '{file_source}*/' './contents/.loaded/{file_name}/'
-    move '{file_source}' '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
+    file_source './../contents/*/'
+    filter './../contents/.loaded/'
+    flag '{file_source}*/' './../contents/.loaded/{file_name}/'
+    move '{file_source}' '/atmosphere/contents/' -log_src './../contents/.loaded/{file_name}/location_off.txt' -log_dest './../contents/.loaded/{file_name}/location_on.txt'
 
 
 [*Delete?2]
 ;grouping=split3
-file_source './contents/.loaded/*/'
-file_source './contents/*/'
-compare './contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+file_source './../contents/.loaded/*/'
+file_source './../contents/*/'
+compare './../contents/.loaded/{split({file_name}," - ",0)} -*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
 delete -src '{file_source}location_on.txt' -filter '{file_source}duplicates.txt'
 delete {file_source}
 
