Update software_update.ini - release info bug fix

--- a/Alchemist/include/software_update.ini
+++ b/Alchemist/include/software_update.ini
@@ -35,7 +35,7 @@ unzip './../repos/cucholix_pchtxts.zip' './../repos/pchtxts/cucholix/'
 unzip './../repos/theboy181_pchtxts.zip' './../repos/pchtxts/theboy181/'
 
 unzip './../repos/cucholix_contents.zip' './../repos/contents/cucholix/'
-download https://raw.githubusercontent.com/ppkantorski/Alchemist-Repos/refs/heads/main/RELEASE.ini ./repos/CURRENT.ini
+download https://raw.githubusercontent.com/ppkantorski/Alchemist-Repos/refs/heads/main/RELEASE.ini ./../repos/CURRENT.ini
 
 [gap]
 ;mode=table
