Update software_update.ini - credits update

--- a/Alchemist/include/software_update.ini
+++ b/Alchemist/include/software_update.ini
@@ -93,4 +93,5 @@ ini_file ./../repos/CURRENT.ini
 'Release'='{ini_file("Release Info",latest_version)}'
 'Credits'='Special thanks to Fl4sh9174,'
 ''='KeatonTheBot, StevensND,'
-''='cucholix and theboy181. ♥'
+''='cucholix and theboy181 for'
+''='their awesome mods. ♥'
