Update software_update.ini - title fix

--- a/Alchemist/include/software_update.ini
+++ b/Alchemist/include/software_update.ini
@@ -1,4 +1,5 @@
-;title='Alchemist '
+;title='Alchemist'
+;display_title='Alchemist '
 ;creator=ppkantorski
 ;version=1.0.0
 ;about='This package was designed for managing, converting, and installing mods.'
